# AmharicE-commerceDataExtractor

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: unittests.yml
data/: README.md
data/processed/: cleaned_normalized_data.csv.dvc  telegram_ecommerce_data_sample.jsonl.dvc  telegram_labeled_data.conll.dvc
data/raw/: telegram_data.csv.dvc
models/: .gitignore  my_xml_ner_model.dvc
notebooks/: Data_ingestion_and _preprocessing.ipynb  Data_labeling.ipynb  Fine_Tune_NER_Model(XML_Roberta).ipynb  Model_Interpretation.ipynb  README.md  Vendor_score_board.ipynb  model-comparision-and-interpretation-notebook.ipynb  scraping_session;.session  scraping_session;.session-journal
scripts/: README.md  pridict_ner.py
src/: README.md
src/core/: comparison_plots.py  train.py
src/models/: ner_model.py
src/services/: telegram_scrapper.py
src/utils/: ner_utils.py  utils.py
tests/: README.md
tests/integration/: test_telegram_scrapper_connection.py
tests/unit/: test_config.py  test_ner_model.py  test_ner_utils.py  test_telegram_scrapper_utils.py  test_train_model.py  test_utils.py
